# custom-graphics-engine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/platform/: win32_window.cpp  win32_window.hpp
src/renderer/: d3d12_renderer.cpp  d3d12_renderer.hpp  irenderer.hpp
